fix(NavFrame-pagestyles): overflow incorrectly on pages with {{infobox}}es (#1761)
* fix(NavFrame-pagestyles): overflow incorrectly on pages with {{infobox}}es

--- a/src/NavFrame-pagestyles/NavFrame-pagestyles.less
+++ b/src/NavFrame-pagestyles/NavFrame-pagestyles.less
@@ -3,6 +3,8 @@
 div {
 	&.Boxmerge,
 	&.NavFrame {
+		display: flex;
+		flex-direction: column;
 		padding: 4px;
 		border: 1px solid #aaa;
 		margin: 0;
